--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,20 @@
-fastapi==0.104.0
-uvicorn==0.23.2
-pandas==2.1.1
-pydantic==2.4.2
-python-multipart==0.0.6
-typing-extensions==4.8.0
-starlette==0.27.0
+annotated-types==0.6.0
+anyio==3.7.1
+click==8.1.7
+colorama==0.4.6
+fastapi==0.104.1
+h11==0.14.0
+idna==3.4
+numpy==1.26.2
+pandas==2.1.3
+pydantic==2.5.2
+pydantic_core==2.14.5
 python-dateutil==2.8.2
-numpy==1.26.0
+python-multipart==0.0.6
 pytz==2023.3.post1
+six==1.16.0
+sniffio==1.3.0
+starlette==0.27.0
+typing_extensions==4.8.0
+tzdata==2023.3
+uvicorn==0.24.0.post1
