--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "files": [
       "electron/**/*",
       "out/**/*",
-      "frontend/public/**/*",
+      "frontend/**/*",
       "package.json"
     ],
     "extraResources": [
