--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,20 +1,29 @@
-annotated-types==0.6.0
-anyio==3.7.1
-click==8.1.7
-colorama==0.4.6
-fastapi==0.104.1
-h11==0.14.0
-idna==3.4
-numpy==1.26.2
-pandas==2.1.3
-pydantic==2.5.2
-pydantic_core==2.14.5
-python-dateutil==2.8.2
-python-multipart==0.0.6
-pytz==2023.3.post1
-six==1.16.0
-sniffio==1.3.0
-starlette==0.27.0
-typing_extensions==4.8.0
-tzdata==2023.3
-uvicorn==0.24.0.post1
+# FastAPI関連ライブラリ
+fastapi>=0.103.1
+uvicorn>=0.23.2
+starlette>=0.27.0
+pydantic>=2.4.0
+
+# データ処理関連
+pandas>=2.1.0
+numpy>=1.25.2
+
+# ファイル操作とUI関連
+python-multipart>=0.0.6
+
+# 日付・時間処理
+python-dateutil>=2.8.2
+
+# ログ・デバッグ
+loguru>=0.7.0
+
+# CORS対応
+aiofiles>=23.1.0
+
+# 環境変数
+python-dotenv>=1.0.0
+
+# 開発ツール
+pytest>=7.4.0
+pytest-asyncio>=0.21.1
+httpx>=0.24.1
