--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
   },
   "dependencies": {
     "electron-is-dev": "^2.0.0",
-    "find-process": "^1.4.7",
+    "find-process": "^1.4.10",
     "wait-on": "^7.2.0"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
-    "electron": "^28.0.0",
-    "electron-builder": "^24.6.4"
+    "electron": "^28.3.3",
+    "electron-builder": "^24.13.3"
   },
   "build": {
     "appId": "com.company.project-dashboard",
@@ -37,24 +37,34 @@
       {
         "from": "backend",
         "to": "app.asar.unpacked/backend",
-        "filter": ["**/*"]
+        "filter": [
+          "**/*"
+        ]
       },
       {
         "from": "data",
         "to": "app.asar.unpacked/data",
-        "filter": ["**/*"]
+        "filter": [
+          "**/*"
+        ]
       }
     ],
     "win": {
-      "target": ["nsis"],
+      "target": [
+        "nsis"
+      ],
       "icon": "frontend/public/icon.ico"
     },
     "mac": {
-      "target": ["dmg"],
+      "target": [
+        "dmg"
+      ],
       "icon": "frontend/public/icon.icns"
     },
     "linux": {
-      "target": ["AppImage"],
+      "target": [
+        "AppImage"
+      ],
       "icon": "frontend/public/icon.png"
     },
     "nsis": {
