--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,34 +1,40 @@
 {
   "name": "project-dashboard-frontend",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "cross-env NODE_ENV=production next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/swc-win32-x64-msvc": "^15.2.2",
     "axios": "^1.6.2",
-    "chart.js": "^4.4.0",
+    "chart.js": "^4.4.1",
     "date-fns": "^2.30.0",
-    "next": "14.2.13",
-    "react": "18.2.0",
+    "lodash": "^4.17.21",
+    "next": "14.0.3",
+    "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
-    "uuid": "^9.0.0"
+    "tailwindcss": "^3.3.5",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/node": "20.10.0",
-    "@types/react": "18.2.38",
-    "@types/react-dom": "18.2.15",
-    "@types/uuid": "^9.0.0",
-    "autoprefixer": "10.4.16",
-    "cross-env": "^7.0.3",
-    "postcss": "8.4.31",
-    "tailwindcss": "3.3.5",
-    "typescript": "5.3.2"
+    "@types/lodash": "^4.14.202",
+    "@types/node": "^20.10.1",
+    "@types/react": "^18.2.39",
+    "@types/react-dom": "^18.2.17",
+    "@types/uuid": "^9.0.7",
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
+    "@typescript-eslint/parser": "^6.13.1",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.54.0",
+    "eslint-config-next": "14.0.3",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "postcss": "^8.4.31",
+    "typescript": "^5.3.2"
   }
 }
