--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
+    "axios": "^1.6.2",
+    "date-fns": "^2.30.0",
     "electron-is-dev": "^2.0.0",
     "find-process": "^1.4.10",
+    "react-query": "^3.39.3",
+    "uuid": "^9.0.1",
     "wait-on": "^7.2.0"
   },
   "devDependencies": {
