--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -12,9 +12,13 @@
     "react/react-in-jsx-scope": "off",
     "react/prop-types": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
-    "@typescript-eslint/no-explicit-any": "warn",
-    "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
-    "no-console": ["warn", { "allow": ["warn", "error"] }]
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-unused-vars": "off",
+    "no-console": "off",
+    "no-empty": "error",
+    "react-hooks/rules-of-hooks": "error",
+    "no-async-promise-executor": "error",
+    "react-hooks/exhaustive-deps": "off"
   },
   "settings": {
     "react": {
