--- a/package.json
+++ b/package.json
@@ -22,16 +22,24 @@
     "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "axios": "^1.6.2",
     "chart.js": "^4.4.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "electron-is-dev": "^2.0.0",
     "find-process": "^1.4.10",
+    "lucide-react": "^0.292.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.15.0",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
     "wait-on": "^7.2.0",
     "zod": "^3.22.2",
