--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "date-fns": "^2.30.0",
     "electron-is-dev": "^2.0.0",
     "find-process": "^1.4.10",
+    "iconv-lite": "^0.6.3",
     "lucide-react": "^0.292.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
